# cpp-libaray

./: README.md  makefile
demoapp/: README.md  main.cpp
lib/: CMakeLists.txt  README.md  makefile
lib/include/: header.hpp
lib/tests/: CMakeLists.txt  README.md
src/: src.cpp
